; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_length_uint64.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_length_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RW_READER = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_length_uint64(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @RW_READER, align 4
  %20 = load i32, i32* @TRUE, align 4
  %21 = load i32, i32* @FALSE, align 4
  %22 = load i32, i32* @FTAG, align 4
  %23 = call i32 @zap_lockdir(i32* %17, i32 %18, i32* null, i32 %19, i32 %20, i32 %21, i32 %22, i32** %14)
  store i32 %23, i32* %15, align 4
  %24 = load i32, i32* %15, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %6
  %27 = load i32, i32* %15, align 4
  store i32 %27, i32* %7, align 4
  br label %52

28:                                               ; preds = %6
  %29 = load i32*, i32** %14, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %11, align 4
  %32 = call i32* @zap_name_alloc_uint64(i32* %29, i32* %30, i32 %31)
  store i32* %32, i32** %16, align 8
  %33 = load i32*, i32** %16, align 8
  %34 = icmp eq i32* %33, null
  br i1 %34, label %35, label %41

35:                                               ; preds = %28
  %36 = load i32*, i32** %14, align 8
  %37 = load i32, i32* @FTAG, align 4
  %38 = call i32 @zap_unlockdir(i32* %36, i32 %37)
  %39 = load i32, i32* @ENOTSUP, align 4
  %40 = call i32 @SET_ERROR(i32 %39)
  store i32 %40, i32* %7, align 4
  br label %52

41:                                               ; preds = %28
  %42 = load i32*, i32** %16, align 8
  %43 = load i32*, i32** %12, align 8
  %44 = load i32*, i32** %13, align 8
  %45 = call i32 @fzap_length(i32* %42, i32* %43, i32* %44)
  store i32 %45, i32* %15, align 4
  %46 = load i32*, i32** %16, align 8
  %47 = call i32 @zap_name_free(i32* %46)
  %48 = load i32*, i32** %14, align 8
  %49 = load i32, i32* @FTAG, align 4
  %50 = call i32 @zap_unlockdir(i32* %48, i32 %49)
  %51 = load i32, i32* %15, align 4
  store i32 %51, i32* %7, align 4
  br label %52

52:                                               ; preds = %41, %35, %26
  %53 = load i32, i32* %7, align 4
  ret i32 %53
}

declare dso_local i32 @zap_lockdir(i32*, i32, i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32* @zap_name_alloc_uint64(i32*, i32*, i32) #1

declare dso_local i32 @zap_unlockdir(i32*, i32) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @fzap_length(i32*, i32*, i32*) #1

declare dso_local i32 @zap_name_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
